Fixed ".input-container" to have "padding-bottom: 5px".
The space between the bottom border and the radio/checkbox were too close.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -90,6 +90,7 @@
           // Input Container
             .input-container{
               border-bottom: 1px solid $white-color;
+              padding-bottom: 5px;
 
               &:last-of-type{
                 border-bottom: none;
